ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-ingress
  annotations:
    # kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: prometheus.kk-demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
    - host: api.kk-demo.com   # Add this new host entry
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service   # Replace with your actual API service name
                port:
                  number: 3000   # Replace with your actual API service port
